# aauth-python-library

./: .gitignore  CLAUDE-CHAT.md  DEMOS.md  INSTRUCTIONS.md  LICENSE  PHASE1-pop-hwk.md  PHASE1.md  PHASE10-proactive-resource-authz.md  PHASE11-mm-as-trust.md  PHASE12-mission-lifecycle.md  PHASE13-direct-approval.md  PHASE1_FIXES.md  PHASE2-identity-jwks.md  PHASE2.md  PHASE3-autonomous-authz.md  PHASE3.md  PHASE4-user-delegation.md  PHASE4.md  PHASE5-agent-is-resource.md  PHASE5-missions.md  PHASE5.md  PHASE6-agent-delegation.md  PHASE6.md  PHASE7-call-chaining.md  PHASE7-token-exchange.md  PHASE7.md  PHASE8-clarification-chat.md  PHASE9-interaction-chaining.md  PLAN.md  PLAN5.md  README.md  RFC9421.md  RFC9530.md  SIG-KEY.md  SPEC_NOTES.md  SPEC_UPDATED.md  UI-DEMO-PLAN.md  debug_signature.py  demo_phase1.py  demo_phase10.py  (+15 more)
aauth/: __init__.py  debug.py  errors.py  identifiers.py
aauth-demo-ui/: README.md
aauth-demo-ui/backend/: generate.py
aauth-demo-ui/frontend/: .gitignore  package-lock.json  package.json
aauth-demo-ui/frontend/app/: globals.css  layout.tsx  page.tsx
aauth-demo-ui/frontend/components/core/: DeferredResponseTimeline.tsx  HeaderInspector.tsx  MissionBlobViewer.tsx  S256ChainVisualization.tsx  SequenceDiagram.tsx  SignatureVisualizer.tsx  StepController.tsx  TokenFlowDiagram.tsx
aauth-demo-ui/frontend/components/layout/: AppShell.tsx  Sidebar.tsx
aauth-demo-ui/frontend/components/scenarios/: ScenarioPage.tsx
aauth-demo-ui/frontend/lib/: loadScenario.ts  store.ts  types.ts
aauth-demo-ui/frontend/lib/scenarios/: call-chaining.json  clarification.json  delegation.json  federated.json  identity-based.json  identity.json  interaction-chaining.json  missions-audit.json  missions-completion.json  missions-end-to-end.json  missions-lifecycle.json  missions-out-of-bounds.json  missions-proactive-authz.json  missions-resource-access.json  ps-managed.json  pseudonymous.json  resource-managed.json  user-delegation.json
aauth-signing/: README.md  pyproject.toml
aauth-signing/aauth_signing/: __init__.py  algorithms.py  errors.py  signature.py  signature_base.py  signature_key.py  signer.py  verifier.py
aauth-signing/aauth_signing/keys/: __init__.py  jwk.py  keypair.py
aauth-signing/aauth_signing/tokens/: __init__.py
aauth/agent/: __init__.py  challenge_handler.py  poller.py  signer.py  token_exchange.py
aauth/headers/: __init__.py  aauth_header.py  agent_auth.py  signature.py  signature_input.py  signature_key.py
aauth/http/: __init__.py  deferred.py  request.py  response.py
aauth/keys/: __init__.py  jwk.py  jwks.py  keypair.py
aauth/metadata/: __init__.py  agent.py  auth_server.py  mission_manager.py  resource.py
aauth/resource/: __init__.py  challenge_builder.py  token_issuer.py  verifier.py
aauth/signing/: __init__.py  algorithms.py  signature.py  signature_base.py  signature_input.py  signature_key.py  signer.py  verifier.py
aauth/tokens/: __init__.py  agent_token.py  auth_token.py  resource_token.py
core/: __init__.py  crypto_utils.py  httpsig.py  metadata.py  tokens.py
flows/: __init__.py  autonomous.py  user_delegated.py
participants/: __init__.py  agent.py  agent_delegate.py  auth_server.py  mission_manager.py  resource.py  user_simulator.py
tests/: __init__.py  conftest.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_poller.py  test_readme_examples.py  test_token_exchange.py
(+25 files in other folders)
