[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aauth"
version = "0.3.4"
description = "AAuth protocol implementation for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "aauth-signing>=0.1.2",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "httpx>=0.25.0",
    "http-message-signatures>=1.0.0",
    "http-sfv>=0.9.8",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
aauth-signing = { path = "aauth-signing", editable = true }

[tool.setuptools.packages.find]
# "aauth*" matches subpackages (aauth.agent, …). Exclude sibling project dirs at repo root.
include = ["aauth*"]
exclude = ["aauth-signing*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

